--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url('http://tinypic.com?ref=dh94e9');
+    background: url('http://i59.tinypic.com/dh94e9.jpg9');
 }
 
 #wrapper {
@@ -50,7 +50,7 @@ body {
 }
 
 #logo {
-    background: url('http://tinypic.com?ref=spvhaa') no-repeat;
+    background: url('http://i62.tinypic.com/spvhaa.png') no-repeat;
     float: left;
     width: 200px;
     height: 100%
